--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,7 +1,7 @@
 .movies__card {
     list-style-type: none;
     background-color: #FDFDFD;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.08);
     border-radius: 6px;
     cursor: pointer;
 }
@@ -66,7 +66,7 @@
     background-color: transparent;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
     .movies__container {
         padding: 8px 14px 7px;
     }
@@ -81,7 +81,7 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .movies__image {
         width: 300px;
         height: 168px;
