--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -22,6 +22,7 @@
     justify-content: space-between;
     padding: 20px 0 19px;
     text-decoration: none;
+    gap: 10px;
 }
 
 .portfolio__item {
