--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -6,10 +6,11 @@
 
 .search__form {
     border-bottom: 1px solid #E8E8E8;
-    display: flex;
-    justify-content: space-between;
     padding-bottom: 13px;
     align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 34px;
+    gap: 20px;
 }
 
 .search__input {
@@ -21,6 +22,7 @@
     color: #A0A0A0;
     padding: 0;
     border: none;
+    width: 100%;
 }
 
 .search__button {
