--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,9 +1,9 @@
-.movies {
+.movies-cards {
     display: flex;
     flex-direction: column;
 }
 
-.movies__list {
+.movies-cards__list {
     display: grid;
     grid-template-columns: repeat(3, 364px);
     column-gap: 24px;
@@ -13,14 +13,14 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .movies__list {
+    .movies-cards__list {
         grid-template-columns: repeat(2, 339px);
         gap: 30px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .movies__list {
+    .movies-cards__list {
         grid-template-columns: 300px;
         gap: 14px;
     }
