--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -32,6 +32,11 @@
     height: 34px;
     border: none;
     background: url('../../images/find.svg') no-repeat;
+    color: #000;
+}
+
+.search__button:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 768px) {
