--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -86,6 +86,7 @@
 
     .techs__list {
         padding-top: 83px;
+        flex-wrap: wrap;
     } 
 
     .techs__element {
@@ -96,7 +97,7 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 360px) {
     .techs {
         background-color: #fff;
         padding: 70px 18px;
